Preprocessing 28 weeks and 12 latest weeks luminosity data

--- a/notebooks/pre-processing_data/WindDirection/28-weeks_January-12_August-03_2018/01-bgarcial-wind-direction.ipynb
+++ b/notebooks/pre-processing_data/WindDirection/28-weeks_January-12_August-03_2018/01-bgarcial-wind-direction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wind_direction = pd.read_csv('../../../data/raw/FincaPorvenir/Metereologico/28-weeks_January-12_August-03_2018/' \\\n",
+    "wind_direction = pd.read_csv('../../../../data/raw/FincaPorvenir/Metereologico/28-weeks_January-12_August-03_2018/' \\\n",
     "                                 'Direccion-del-viento_January-12_August-03_2018.csv', )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  2018-01-12 02:17:28                          O"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "False"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "array(['NO', 'E', 'SO', ..., 'SE', 'S', 'SE'], dtype=object)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
