Preprocessing 28 weeks and 12 latest weeks precipitations and temperature data

--- a/notebooks/pre-processing_data/Precipitations/Latest_12-weeks_May-4_August-03_2018/precipitations.ipynb
+++ b/notebooks/pre-processing_data/Precipitations/Latest_12-weeks_May-4_August-03_2018/precipitations.ipynb
@@ -868,13 +868,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "precipitations_test_df.to_csv('../../../../data/processed/Luminosity/28-weeks_January-12_August-03_2018/' +'\\n' \n",
-    "                                 'Luminosity_Normalized_TESTING_January-12_August-03.csv', sep=',', header=True, index=False)"
+    "precipitations_l12w_test_df.to_csv('../../../../data/processed/Precipitations/Latest_12-weeks_May-4_August-03_2018/' +'\\n' \n",
+    "                                 'Precipitations_Normalized_TESTING_JMay-4_August-03_2018.csv', sep=',', header=True, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
