Pre-processing Wind Direction data

--- a/notebooks/pre-processing_data/WindDirection/28-weeks_January-12_August-03_2018/01-bgarcial-wind-direction.ipynb
+++ b/notebooks/pre-processing_data/WindDirection/28-weeks_January-12_August-03_2018/01-bgarcial-wind-direction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4  2018-01-12 02:17:28                          O"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "array(['NO', 'E', 'SO', ..., 'SE', 'S', 'SE'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "4                          O"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,12 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This dataset created will not be used like final, canonical data sets for modeling \n",
-    "wind_direction_pos_df.to_csv('../../../data/interim/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "wind_direction_pos_df.to_csv('../../../../data/interim/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction_January-12_August-03_2018_without-dates.csv', sep=',', header=True, index=False)"
    ]
   },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "array(['NO', 'E', 'SO', ..., 'SE', 'S', 'SE'], dtype=object)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4                          O"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "9                              0                              0  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "9  1  0   0   0  0  0   0   0"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,12 +980,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export this dataframe to comma separated value file:\n",
-    "wind_direction_pos_df.to_csv('../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "wind_direction_pos_df.to_csv('../../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction_January-12_August-03_2018_DummiesValues.csv', sep=',', header=True, index=False)"
    ]
   },
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "       [0, 0, 0, ..., 0, 1, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,30 +1201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.tofile('../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "a.tofile('../../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction-TRAINING_January-12_August-03_2018_DummiesValues.csv', sep=',',)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 ... 0 0 1]\n",
-      " [1 0 0 ... 0 0 0]\n",
+      "[[1 0 0 ... 0 0 0]\n",
       " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 1]\n",
       " ...\n",
-      " [0 0 0 ... 0 1 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [1 0 0 ... 0 0 0]]\n"
+      " [0 0 0 ... 0 0 1]\n",
+      " [1 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 1 0]]\n"
      ]
     }
    ],
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1280,21 +1280,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1305,11 +1305,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1325,31 +1325,31 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1372,9 +1372,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1382,10 +1382,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1394,19 +1394,19 @@
       ],
       "text/plain": [
        "   E  N  NE  NO  O  S  SE  SO\n",
-       "0  0  0   0   0  0  0   0   1\n",
-       "1  1  0   0   0  0  0   0   0\n",
-       "2  0  0   0   1  0  0   0   0\n",
+       "0  1  0   0   0  0  0   0   0\n",
+       "1  0  0   0   1  0  0   0   0\n",
+       "2  0  0   0   0  0  0   0   1\n",
        "3  1  0   0   0  0  0   0   0\n",
-       "4  0  1   0   0  0  0   0   0\n",
-       "5  0  0   0   0  0  0   0   1\n",
-       "6  0  1   0   0  0  0   0   0\n",
+       "4  0  0   0   0  0  0   1   0\n",
+       "5  0  1   0   0  0  0   0   0\n",
+       "6  0  0   0   1  0  0   0   0\n",
        "7  0  0   0   1  0  0   0   0\n",
-       "8  0  0   0   0  1  0   0   0\n",
-       "9  0  0   0   0  0  0   1   0"
+       "8  0  0   0   0  0  0   1   0\n",
+       "9  0  0   0   1  0  0   0   0"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,12 +1417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We export the wind_direction_train dataset to comma separated value file:\n",
-    "wind_direction_train_df.to_csv('../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "wind_direction_train_df.to_csv('../../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction-TRAINING_January-12_August-03_2018_DummiesValues.csv', sep=',', header=True, index=False)"
    ]
   },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,17 +1444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.tofile('../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "b.tofile('../../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction-TESTING_January-12_August-03_2018_DummiesValues.csv', sep=',',)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1521,18 +1521,18 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1567,13 +1567,13 @@
       "text/plain": [
        "   E  N  NE  NO  O  S  SE  SO\n",
        "0  1  0   0   0  0  0   0   0\n",
-       "1  0  0   0   1  0  0   0   0\n",
-       "2  1  0   0   0  0  0   0   0\n",
+       "1  0  0   0   0  0  1   0   0\n",
+       "2  0  0   0   1  0  0   0   0\n",
        "3  1  0   0   0  0  0   0   0\n",
        "4  1  0   0   0  0  0   0   0"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,12 +1592,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We export the wind_direction_train dataset to comma separated value file:\n",
-    "wind_direction_test_df.to_csv('../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
+    "wind_direction_test_df.to_csv('../../../../data/processed/WindDirection/28-weeks_January-12_August-03_2018/' +'\\n' \n",
     "                             'Wind-Direction-TESTING_January-12_August-03_2018_DummiesValues.csv', sep=',', header=True, index=False)"
    ]
   },
